k8s/socialcom.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: socialcom
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: socialcom
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: socialcom
    spec:
      containers:
      - name: socialcom
        image: 774974967276.dkr.ecr.ap-south-1.amazonaws.com/socialnetwork:com11
        ports:
        - containerPort: 6045
---
apiVersion: v1
kind: Service
metadata:
  name: socialcom
  namespace: default
  labels:
    app: socialcom
spec:
  ports:
  - name: http
    port: 6045
    protocol: TCP
    targetPort: 6045
  selector:
    app: socialcom
  type: NodePort
