k8s/socialde.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: socialde
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: socialde
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: socialde
    spec:
      containers:
      - name: socialde
        image: 774974967276.dkr.ecr.ap-south-1.amazonaws.com/socialnetwork:de9
        ports:
        - containerPort: 6045
---
apiVersion: v1
kind: Service
metadata:
  name: socialde
  namespace: default
  labels:
    app: socialde
spec:
  ports:
  - name: http
    port: 6045
    protocol: TCP
    targetPort: 6045
  selector:
    app: socialde
  type: NodePort
